# experiment_handler

./: CMakeLists.txt  README.md  navInitPoses.txt  navTask.txt  navTaskPos.txt  package.xml  run_taskManager
src/: NavExpManager.cpp  NavExpManager.h  NavExpManagerPy.py  NavExpManagerPy2.py
