<?xml version="1.0"?>
<package>
  <name>experiment_handler</name>
  <version>0.0.1</version>
  <description>Some real robot experiment managers</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="erwan.renaudo@gmail.com">Erwan Renaudo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/experimentHandler</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="erwan.renaudo@gmail.com">Erwan Renaudo</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>habelar_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>habelar_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
